--- a/src/style/footer.sass
+++ b/src/style/footer.sass
@@ -50,6 +50,10 @@
   display: flex
   align-items: center
   margin-bottom: 10px
+  > a
+    color: black
+    &:hover
+      text-decoration: underline
 
 .contact-icon, .social-icon
   width: 34px
@@ -58,7 +62,7 @@
   border-radius: 15px
   padding: 5px
 
-.social-icon  
+.phone-icon, .social-icon  
     &:hover
         background-color: $secondary-color
 .contact-icon
